모바일 fixed header 및 visual 높이값 보정

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,79 +1,159 @@
-/* mobile */
-
+/* mobile.css */
 body {
-	/* background: orange; */
-	font-size: 14px;
+  /* background: orange; */
+  font-size: 14px;
 }
 
 section h2 {
-	font-size: 20px;
+  font-size: 20px;
 }
 
 #toggle-btn {
-	border: none;
-	font-size: 24px;
+  border-style: none;
+  font-size: 24px;
+  background: transparent;
+  cursor: pointer;
 }
+
+.bi-list {
+  /* font-size: 18px; */
+}
+
 
 .container {
-	width: 100%;
-	padding-left: 20px;
-	padding-right: 20px;
-	outline: 1px solid #333;
+  width: 100%;
+  /* max-width: 1440px;
+  margin: 0 auto; */
+  padding-left: 20px;
+  padding-right: 20px;
+  /* outline: 1px solid #333; */
 }
 
 #toggle-btn {
-	display: block;
-	font-size: 24px;
-	background: transparent;
-	cursor: pointer;
+  display: block;
 }
 
-#main-header{
-	background: #fff;
+#main-header {
+  background: #fff;
+  border-bottom: 1px solid #ccc;
 }
 
 #main-header .container {
-	position: relative;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	height: var(--mobile-header-height);
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: var(--mobile-header-height);
+}
+
+#gnb ul li {
+  display: block;
 }
 
 #gnb {
-	position: absolute;
-	left: 0;
-	top: var(--mobile-header-height);
-	background: #fff;
-	width: 100%;
-	border-top: 1px solid #ccc;
-	background: #ededed;
+  position: absolute;
+  left: 0;
+  top: var(--mobile-header-height);
+  background: fff;
+  width: 100%;
+  border-top: 1px solid #ccc;
+  background: #ededed;
 }
 
 #gnb > ul {
-	padding: 20px;
-	font-size: 24px;
+  padding: 20px;
+  font-size: 24px;
 }
 
 #gnb > ul > li {
-	/* border-bottom: 1px solid #ccc; */
+
 }
 
 #gnb > ul > li > a {
-	display: block;
-	padding: 10px;
+  display: block;
+  padding: 10px;
+}
+
+
+/* 모바일 로고 크기 */
+#main-header {
+  border-bottom: 1px solid #ccc;
+  position: fixed;
+  width: 100%;
+  height: var(--mobile-header-height);
+  background: #fff;
 }
 
 #main-header .container h1 img {
-	display: block;
+  display: block;
+  width: 140px;
 }
 
 /* 토글 버튼 */
-
 #main-header nav {
 	display: none;
 }
 
 #main-header nav.on {
 	display: block;
+}
+
+
+/* 메인 비주얼 */
+#main-visual {
+  background: #FCEEAD;
+  width: 100%;
+  height: calc(100vh - var(--mobile-header-height));
+  box-sizing: content-box;
+  padding-top: var(--mobile-header-height);  
+}
+
+#main-visual .container {
+  display: block;
+  /* background: #ccc; */
+  height: 100%;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+#main-visual .title {
+  outline: 1px solid #333;
+  padding-top: 40px;
+}
+
+#main-visual .title h2 {
+  /* outline: 1px solid red; */
+  font-weight: 500;
+  font-size: 30px;
+  margin-bottom: 55px;
+  letter-spacing: 0.2em;  
+}
+
+#main-visual .title p {
+  /* outline: 1px solid red; */
+}
+
+#main-visual .title p > span {
+  display: block;
+}
+
+#main-visual .title p > span:first-child {
+  font-weight: 500;
+  font-size: 24px;
+  letter-spacing: 0.3em;
+}
+
+#main-visual .title p > span:last-child {
+  font-weight: 500;
+  font-size: 38px;
+}
+
+#main-visual .img {
+  outline: 1px solid #333;
+}
+
+#main-visual .img img {
+  width: 75%;
 }
