--- a/css/pc.css
+++ b/css/pc.css
@@ -1,96 +1,115 @@
-/* pc */
-
+/* pc.css */
 body {
-	/* background: #ccc; */
-	font-size: 20px;
+  /* background: #ccc; */
+  font-size: 20px;
 }
 
 section h2 {
-	font-size: 50px;
+  font-size: 50px;
 }
 
 .container {
-	width: 100%;
-	padding-left: 30px;
-	padding-right: 30px;
-	/* outline: 1px solid #333; */
+  width: 100%;
+  /* max-width: 1440px;
+  margin: 0 auto; */
+  padding-left: 30px;
+  padding-right: 30px;
+  /* outline: 1px solid #333; */
 }
 
 #toggle-btn {
-	display: none;
+  display: none;
+}
+
+#main-header {
+  border-bottom: 1px solid #ccc;
+  position: fixed;
+  width: 100%;
+  height: var(--pc-header-height);
+  background: #fff;
 }
 
 #main-header .container {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	height: var(--pc-header-height);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 100%;
 }
 
 #gnb ul li {
-	display: inline-block;
-	margin-left: 140px;
+  display: inline-block;
+  margin-left: 140px;
+}
+
+/* 메뉴 간격 조정(910px까지의 메뉴 간격) */
+@media screen and (max-width: 910px) {
+  #gnb ul li {
+    margin-left: 80px;
+  }
 }
 
 /* 메인 비주얼 */
 #main-visual {
-	background: #FCEEAD;
-	width: 100%;
-	height: 100vh;
+  background: #FCEEAD;
+  width: 100%;
+  height: calc(100vh - var(--pc-header-height));
+  box-sizing: content-box;
+  padding-top: var(--pc-header-height);  
 }
 
 #main-visual .container {
-	display: flex;
-	background: #ccc;
-	height: 100%;
+  display: flex;
+  /* background: #ccc; */
+  height: 100%;
 }
 
 #main-visual .title {
-	flex: 1;
-	outline: 1px solid #333;
-	display: flex;
-	justify-content: center;
-	align-items: center;
+  flex: 1;
+  /* outline: 1px solid #333; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 #main-visual .title h2 {
-	/* outline: 1px solid red; */
-	font-weight: 500;
-	font-size: 74.4828px;
-	line-height: 90px;
-	margin-bottom: 55px;
-	letter-spacing: 0.2em;
+  /* outline: 1px solid red; */
+  font-weight: 500;
+  font-size: 74.4828px;
+  line-height: 90px;
+  margin-bottom: 55px;
+
+letter-spacing: 0.2em;  
 }
 
 #main-visual .title p {
-	/* outline: 1px solid red; */
+  /* outline: 1px solid red; */
 }
 
-#main-visual .title p>span {
-	display: block;
+#main-visual .title p > span {
+  display: block;
 }
 
 #main-visual .title p > span:first-child {
-	font-weight: 500;
-	font-size: 32px;
-	line-height: 46px;
-	letter-spacing: 0.3em;
+  font-weight: 500;
+  font-size: 32px;
+  line-height: 46px;
+  letter-spacing: 0.3em;
 }
 
 #main-visual .title p > span:last-child {
-	font-weight: 500;
-	font-size: 48px;
-	line-height: 70px;
+  font-weight: 500;
+  font-size: 48px;
+  line-height: 70px;
 }
 
 #main-visual .img {
-	flex: 1;
-	outline: 1px solid #333;
-	display: flex;
-	justify-content: center;
-	align-items: center;
+  flex: 1;
+  /* outline: 1px solid #333; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 #main-visual .img img {
-	width: 75%;
+  width: 75%;
 }
