--- a/css/mobile.css
+++ b/css/mobile.css
@@ -119,7 +119,7 @@ section h2 {
 }
 
 #main-visual .title {
-  outline: 1px solid #333;
+  /* outline: 1px solid #333; */
   padding-top: 40px;
 }
 
@@ -151,9 +151,77 @@ section h2 {
 }
 
 #main-visual .img {
-  outline: 1px solid #333;
+  /* outline: 1px solid #333; */
 }
 
 #main-visual .img img {
   width: 75%;
+}
+
+/* vitamin 섹션 */
+#main-section1 {
+	background: #fff;
+	height: calc(100vh - var(--mobile-header-height));
+}
+
+#main-section1 .container {
+	height: 100%;
+	padding: 0;
+}
+
+#main-section1 .container .col {
+	/* flex: 1; */
+	/* outline: 1px solid #333; */
+}
+
+#main-section1 .container .col:first-child {
+	display: flex;
+	height: 50%;
+	justify-content: center;
+  align-items: center;
+}
+
+#main-section1 .container .col:first-child img {
+	width: 71%;
+	display: block;
+}
+
+#main-section1 .container .col:last-child {
+	display: flex;
+	height: 50%;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+	background: var(--main-color);
+}
+
+#main-section1 .container .col:last-child h2 {
+	margin-bottom: 20px;
+	font-weight: 700;
+	font-size: 20px;
+	line-height: 29px;
+}
+
+#main-section1 .container .col:last-child .sub-title {
+	font-size: 30px;
+	font-weight: 500;
+	font-size: 14px;
+	line-height: 20px;
+	margin-bottom: 20px;
+}
+
+#main-section1 .container .col:last-child p {
+	margin-bottom: 40px;
+	font-weight: 400;
+	font-size: 14px;
+	line-height: 20px;
+	padding-left: 26px;
+	padding-right: 26px;
+}
+
+#main-section1 .container .info {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
