--- a/css/pc.css
+++ b/css/pc.css
@@ -113,3 +113,56 @@ letter-spacing: 0.2em;
 #main-visual .img img {
   width: 75%;
 }
+
+/* vitamin 섹션 */
+#main-section1 {
+	background: #fff;
+	height: calc(100vh - var(--pc-header-height));
+}
+
+#main-section1 .container {
+	display: flex;
+	height: 100%;
+	padding: 0;
+}
+
+#main-section1 .container .col {
+	/* flex: 1; */
+	width: 50%;
+	/* outline: 1px solid #333; */
+}
+
+#main-section1 .container .col:first-child {
+	display: flex;
+	justify-content: center;
+  align-items: center;
+}
+
+#main-section1 .container .col:first-child img {
+	width: 71%;
+	display: block;
+}
+
+#main-section1 .container .col:last-child {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	padding-left: 75px;
+	padding-right: 30px;
+	background: var(--main-color);
+}
+
+#main-section1 .container .col:last-child h2 {
+	margin-bottom: 5px;
+	font-weight: 500;
+}
+
+#main-section1 .container .col:last-child .sub-title {
+	font-size: 30px;
+	font-weight: 500;
+}
+
+#main-section1 .container .col:last-child p {
+	margin-bottom: 40px;
+	max-width: 570px;
+}
