--- a/css/style.css
+++ b/css/style.css
@@ -37,3 +37,25 @@ button:hover {
 	color: #000;
 	font-weight: 500;
 }
+
+
+#main-header {
+	z-index: 999;
+}
+
+.btn {
+	font-size: 16px;
+	width: 245px;
+	height: 50px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	/* background: #ED1B25; */
+	color: #000;
+	border: 1px solid var(--sub-color);
+}
+
+.btn-detail {
+	background: var(--sub-color);
+	color: #fff;
+}
