--- a/css/pc.css
+++ b/css/pc.css
@@ -1,117 +1,116 @@
 /* pc.css */
 body {
-  /* background: #ccc; */
-  font-size: 20px;
+	/* background: #ccc; */
+	font-size: 20px;
 }
 
 section h2 {
-  font-size: 50px;
+	font-size: 50px;
 }
 
 .container {
-  width: 100%;
-  /* max-width: 1440px;
+	width: 100%;
+	/* max-width: 1440px;
   margin: 0 auto; */
-  padding-left: 30px;
-  padding-right: 30px;
-  /* outline: 1px solid #333; */
+	padding-left: 30px;
+	padding-right: 30px;
+	/* outline: 1px solid #333; */
 }
 
 #toggle-btn {
-  display: none;
+	display: none;
 }
 
 #main-header {
-  border-bottom: 1px solid #ccc;
-  position: fixed;
-  width: 100%;
-  height: var(--pc-header-height);
-  background: #fff;
+	border-bottom: 1px solid #ccc;
+	position: fixed;
+	width: 100%;
+	height: var(--pc-header-height);
+	background: #fff;
 }
 
 #main-header .container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  height: 100%;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	height: 100%;
 }
 
 #gnb ul li {
-  display: inline-block;
-  margin-left: 140px;
+	display: inline-block;
+	margin-left: 140px;
 }
 
 /* 메뉴 간격 조정(910px까지의 메뉴 간격) */
 @media screen and (max-width: 910px) {
-  #gnb ul li {
-    margin-left: 80px;
-  }
+	#gnb ul li {
+		margin-left: 80px;
+	}
 }
 
 /* 메인 비주얼 */
 #main-visual {
-  background: #FCEEAD;
-  width: 100%;
-  height: calc(100vh - var(--pc-header-height));
-  box-sizing: content-box;
-  padding-top: var(--pc-header-height);  
+	width: 100%;
+	height: calc(100vh - var(--pc-header-height));
+	box-sizing: content-box;
+	padding-top: var(--pc-header-height);
 }
 
 #main-visual .container {
-  display: flex;
-  /* background: #ccc; */
-  height: 100%;
+	display: flex;
+	/* background: #ccc; */
+	height: 100%;
 }
 
 #main-visual .title {
-  flex: 1;
-  /* outline: 1px solid #333; */
-  display: flex;
-  justify-content: center;
-  align-items: center;
+	flex: 1;
+	/* outline: 1px solid #333; */
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 #main-visual .title h2 {
-  /* outline: 1px solid red; */
-  font-weight: 500;
-  font-size: 74.4828px;
-  line-height: 90px;
-  margin-bottom: 55px;
+	/* outline: 1px solid red; */
+	font-weight: 500;
+	font-size: 74.4828px;
+	line-height: 90px;
+	margin-bottom: 55px;
 
-letter-spacing: 0.2em;  
+	letter-spacing: 0.2em;
 }
 
 #main-visual .title p {
-  /* outline: 1px solid red; */
+	/* outline: 1px solid red; */
 }
 
-#main-visual .title p > span {
-  display: block;
+#main-visual .title p>span {
+	display: block;
 }
 
-#main-visual .title p > span:first-child {
-  font-weight: 500;
-  font-size: 32px;
-  line-height: 46px;
-  letter-spacing: 0.3em;
+#main-visual .title p>span:first-child {
+	font-weight: 500;
+	font-size: 32px;
+	line-height: 46px;
+	letter-spacing: 0.3em;
 }
 
-#main-visual .title p > span:last-child {
-  font-weight: 500;
-  font-size: 48px;
-  line-height: 70px;
+#main-visual .title p>span:last-child {
+	font-weight: 500;
+	font-size: 48px;
+	line-height: 70px;
 }
 
 #main-visual .img {
-  flex: 1;
-  /* outline: 1px solid #333; */
-  display: flex;
-  justify-content: center;
-  align-items: center;
+	flex: 1;
+	/* outline: 1px solid #333; */
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 #main-visual .img img {
-  width: 75%;
+	width: 75%;
 }
 
 /* vitamin 섹션 */
@@ -135,7 +134,7 @@ letter-spacing: 0.2em;
 #main-section1 .container .col:first-child {
 	display: flex;
 	justify-content: center;
-  align-items: center;
+	align-items: center;
 }
 
 #main-section1 .container .col:first-child img {
@@ -165,4 +164,85 @@ letter-spacing: 0.2em;
 #main-section1 .container .col:last-child p {
 	margin-bottom: 40px;
 	max-width: 570px;
+}
+
+
+/* 메인섹션 2 -- 2 x 2 레이아웃 */
+
+#main-section2 .container {
+	width: 100%;
+	height: calc(100vh - var(--pc-header-height));
+	display: flex;
+	padding: 0;
+	flex-wrap: wrap;
+	justify-content: center;
+	align-items: center;
+}
+
+#main-section2 .container .col {
+	width: 50%;
+	height: 50%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+
+#main-section2 .container .col h2 {
+	font-size: 50px;
+	margin-bottom: 20px;
+}
+
+#main-section2 .container .col p {
+	font-size: 20px;
+	margin-bottom: 50px;
+}
+
+#main-section2 .container .col:first-child {
+	background: var(--brand-color);
+}
+
+#main-section2 .container .col:nth-child(2) {
+	background-image: url(../images/history-bg.png);
+	color: #fff;
+}
+
+#main-section2 .container .col:nth-child(3) {
+	background-image: url(../images/play-bg.png);
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	color: #fff;
+	position: relative;
+}
+
+#main-section2 .container .col:nth-child(4) {
+	background-image: url(../images/FAQ-bg.png);
+	background-repeat: no-repeat;
+	background-size: cover;
+	color: #fff;
+	position: relative;
+}
+
+.box {
+	width: 100%;
+	height: 100%;
+	background: rgba(0, 0, 0, 0.5);
+	position: absolute;
+}
+
+#main-section2 .container .col:nth-child(3) p {
+	margin-bottom: 20px;
+}
+
+#main-section2 .container .col:first-child img {
+	max-width: 100%;
+}
+
+/* 태블릿 구간 칼럼 여백(보정) */
+@media screen and (max-width: 1145px) {
+	#main-section2 .container .col {
+		padding-left: 20px;
+		padding-right: 20px;
+	}
 }
