--- a/css/mobile.css
+++ b/css/mobile.css
@@ -226,3 +226,65 @@ section h2 {
 	justify-content: space-around;
 	height: 100%;
 }
+
+
+
+/* 메인섹션 2 -- 2 x 2 레이아웃 */
+#main-section2 .container {
+  width: 100%;
+  height: calc(100vh - var(--mobile-header-height));
+  padding: 0;
+}
+
+#main-section2 .container .col {
+  width: 100%;
+  height: 25%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+#main-section2 .container .col h2 {
+  font-size: 30px;
+  margin-bottom: 10px;
+}
+
+#main-section2 .container .col p {
+  font-size: 10px;
+}
+
+/* 모든 col의 아이콘 이미지 비표시 */
+#main-section2 .container .col img {
+  display: none;
+}
+
+/* 첫번째 .col */
+#main-section2 .container .col:first-child {
+  background: #fec82f;
+}
+
+
+/* 두번째 .col */
+#main-section2 .container .col:nth-child(2) {
+  background-image: url('../images/history-bg.png');
+  color: #fff;
+}
+
+/* 세번째 .col */
+#main-section2 .container .col:nth-child(3) {
+  background-image: url('../images/play-bg.png');
+  height: 25%;
+  color: #fff;
+}
+
+/* 네번째 .col */
+#main-section2 .container .col:nth-child(4) {
+  background-image: url('../images/FAQ-bg.png');
+  color: #fff;
+  position: relative;
+}
