--- a/css/pc.css
+++ b/css/pc.css
@@ -186,6 +186,9 @@ section h2 {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	text-align: center;
+	background-size: cover;
+	background-position: center;
 }
 
 #main-section2 .container .col h2 {
