--- a/css/mobile.css
+++ b/css/mobile.css
@@ -288,3 +288,43 @@ section h2 {
   color: #fff;
   position: relative;
 }
+
+/* 모달창 */
+.modal {
+	position: fixed;
+	left: 0;
+	top: 0;
+	width: 100vw;
+	height: 100vh;
+	background: rgba(0,0,0,0.8);
+	z-index: 1000;
+	display: none;
+	justify-content: center;
+	align-items: center;
+}
+
+.modal.on {
+	display: flex;
+}
+
+.modal .box {
+	position: relative;
+	/* 영상비율 16:9 */
+	width: 500px;
+  height: 300px;
+}
+
+.modal .box iframe {
+	width: 100%;
+	height: 100%;
+}
+
+.modal .btn-close {
+	position: absolute;
+	border: none;
+	background: none;
+	color: #fff;
+	font-size: 48px;
+	top: -70px;
+	right: 0px;
+}
